# ReVis

./: .gitignore  LICENSE  README.md  automatic_sidebar.js  index.html  pyproject.toml  requirements.txt
example_data/: B_siliquastri_cumulative_repeats_after_all_transcripts.txt  B_siliquastri_cumulative_repeats_after_sig_transcripts_90th_GF_size_percentile.txt  B_siliquastri_cumulative_repeats_before_all_transcripts.txt  B_siliquastri_cumulative_repeats_before_sig_transcripts_90th_GF_size_percentile.txt  B_siliquastri_transcript_numbers.txt  CAFE5_Base_family_results.txt  repeat_statistics_b_siliquastri_table.tsv
paper_analysis/: GO_terms_smell.txt  GO_terms_toxins.txt  Nvit_GO_smell_transcripts_list.txt  Nvit_background_transcripts_list.txt  Nvit_foreground_transcripts_list.txt  Nvit_gene_ontology.gaf  ReVis_GO_transcripts.sh  ReVis_genome_wide.sh  get_transcript_IDs_from_GO_terms.py  isoform_filter_gff.sh  parse_gff.py  repeatmodeller_repeatmasker.sh  single_exon_IDs.py
paper_analysis/orphan_genes_test/: Aobt_orphans.sh  Cmac_orphans.sh
paper_analysis/orphan_genes_test.txt/: Aobt_orphans.sh
src/: README.md  ReVis.py  genes_windows.py  parse_gff.py  parse_repeats.py  plot_stacked_hist.py  repeatmasker_window_analysis.py  repeats_windows.py  test_confidence_interval.sh
src/ReVis/: ReVis.py  ReVis_transcript_surroundings.py  confidence_interval_surroundings.py  fourier_denoise_surroundings.py  genes_windows.py  make_transcript_surrounds_table.py  parse_gff.py  parse_orthogroups.py  parse_repeats.py  requirements.txt  (+3 more)
tests/: test_repeatmasker_window_analysis.py
(+6 files in other folders)
