[build-system]
requires = ["hatchling >= 1.26", "tqdm >= 4.0.0]
build-backend = "hatchling.build"

[project]
name = "ReVis"
version = "1.0.0"
authors = [
  { name="Milena R. Trabert", email="milena.trabert@t-online.de" },
]
description = "Visualizing the output of repeatmasker in a stacked histogram"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/milena-t/ReVis"